# weirdshark

./: .gitignore  README.md  TODO.md
weirdshark/: Cargo.toml  TODO  build.rs
weirdshark-cli/: Cargo.toml  build.rs
weirdshark-cli/src/: args.rs  main.rs  tuple2.rs
weirdshark-cli/src/args/: mod.rs  tuple2.rs
weirdshark/src/: capturer.rs  error.rs  filters.rs  lib.rs  main.rs  write_scheduler.rs
weirdshark/src/capturer/: builder.rs  config.rs  mod.rs  parser.rs  write_scheduler.rs
weirdshark/tests/: integration_tests.rs
